--- a/ds/基本数据结构.md
+++ b/ds/基本数据结构.md
@@ -64,3 +64,59 @@
  “（（））”
 
  “（（（））”
+
+## 栈练习二：{[()]}匹配
+
+## 栈练习三：十进制转换成二进制
+
+计算机中，所有的值都是以0和1存储的
+
+十进制的233：`2*10^2 + 3*10^1 + 3*10^0`
+
+二进制11101001：`1*2^7+1*2^6+1*2^5+0*2^4+1*2^3+0*2^2+0*2^1+1*2^0`
+
+00000111
+
+`1*2^2 + 1*2^1 + 1*2^0` = 7
+
+十进制 7 转换成8位二进制
+
+“除2法”
+
+7/2 = 商3余1 1
+
+3/2 = 商1 余1 1
+
+1/2 = 商0 余1 1
+
+十进制的233，用8位二进制
+
+233 / 2 = 商116余1 1
+
+116/2 = 商 58 余0 0
+
+58/2 = 商 29 余0 0
+
+29/2 = 商14 余1 1
+
+14/2 = 商7 余0 0
+
+7/2 = 商3余1 1
+
+3/2 = 商1 余1 1
+
+1/2 = 商0 余1 1
+
+11101001 = `1*2^7+1*2^6+1*2^5+0*2^4+1*2^3+0*2^2+0*2^1+1*2^0`
+
+八进制：0-8 `3*8^2+5*8^1+1*8^0`
+
+十六进制：0-9 + ABCDEF
+
+233 / 16 = 商14 余9 9
+
+14 /16 = 商0 余14 14
+
+```
+14*16^1 + 9*16^0
+```
