--- a/ds3_sortandsoarch/排序与搜索.md
+++ b/ds3_sortandsoarch/排序与搜索.md
@@ -211,3 +211,14 @@ item in [1,2,3,4]
     假如选取数列第一个值为’基准‘
 
     [31,26,20,17,44] 54 [77,55,93]
+
+## 三、总结
+
+1. 对于有序或者无序列表，顺序搜索的时间复杂度是：O(n)
+2. 在最坏的情况下，有序列表的二分查找时间复杂度是：O(logn)
+3. 哈希表可以提供恒定时间搜索
+4. 冒泡排序，选择排序和插入排序，时间复杂度O(n^2)
+5. 希尔排序通过排序增量子列表来改进插入排序，它落在O(n)和O(n^2)之间
+6. 归并排序 O(nlogn),但是合并过程需要增加额外的空间
+7. 快速排序O(nlogn),但如果分割点不在列表中间附近，可能会降到O(n^2)，它不需要额外空间
+
