--- a/ds4_tree/树和树的算法.md
+++ b/ds4_tree/树和树的算法.md
@@ -27,3 +27,22 @@
 - 如果树中的每个节点最多有两个子节点，我们说该树是一个**二叉树**。
 
 定义二：树是空的，或者由一个根节点和零个或多个子树组成，每个子树也是一棵树。每个子树的根节点通过边连接到父树的根节点。（树的递归定义）
+
+## 三、节点表示
+
+## 四、分析树
+
+分析树可以用于表示诸如句子或数学表达式的真实世界构造。
+
+( (7+3) * (5-2) )
+
+构建分析树的规则：
+
+1. 如果当前符号是'('，添加一个新节点作为当前节点的左子节点，并下降到左子节点
+2. 如果当前符号在 + - * /中，将当前节点的根值设置为由当前符号表示的运算符。添加一个新节点作为当前节点的右子节点，并下降到右子节点
+3. 如果当前符号是数字，将当前节点的根值设置为该数字并返回到父节点
+4. 如果当前符号是 ')'，则转到当前节点的父节点
+
+（3 + （4*5））
+
+[(,3,+,(,4,*,5,),)]
