--- a/ds4_tree/树和树的算法.md
+++ b/ds4_tree/树和树的算法.md
@@ -46,3 +46,12 @@
 （3 + （4*5））
 
 [(,3,+,(,4,*,5,),)]
+
+## 五、树的遍历
+
+访问树节点方式，有三种模式可以用来访问树中的所有的节点。这三中模式的差别是每个节点被访问的顺序。我们称这种访问节点的方式为“遍历”。
+
+1. 前序：首先访问根节点，然后递归的做左侧子树的前序遍历，随后是右侧子树的递归前序遍历
+2. 中序：递归的对左子树进行一次遍历，访问根节点，最后递归遍历右子树
+3. 后序：递归的对左子树和右子进行后序遍历，然后访问根节点
+
