构建字梯图

--- a/ds5_graph/图.md
+++ b/ds5_graph/图.md
@@ -1,3 +1,5 @@
+
+
 ## 一、词汇和定义
 
 1. **顶点（节点）**：图的基本部分。它有一个专门的名称叫做：键。节点可以有附加信息。我们将这个附加信息称为“有效载荷”
@@ -41,3 +43,19 @@ E = {(v0,v1,5),(v1,v2,4),(v2,v3,9),(v3,v4,7),(v4,v0,1),(v0,v5,2),(v5,v4,8),(v3,v
 因为矩阵中大多数单元格式空的，这个矩阵是“稀疏矩阵”
 
 ## 四、邻接表
+
+利用空间更高效的方式，字典表示顶点的关系，字典的键表示顶点，值表示权重
+
+| v0   | id = 'V0' adj = {V1:5,V5:2} |
+| ---- | --------------------------- |
+| v1   | id='V1' adj = {V2:4}        |
+| v2   | id='V2' adj = {V3:9}        |
+| v3   | id='V3' adj = {V4:7,V5:3}   |
+| v4   | id='V4' adj = {V0:1}        |
+| v5   | id='V5' adj = {V2:1,V4:8}   |
+
+## 五、图的实现
+
+| _OOL                                             | F_OL                       | FO_L                       | FOO_                       |
+| ------------------------------------------------ | -------------------------- | -------------------------- | -------------------------- |
+| POOL<br /> ROOL <br />NOOL<br /> LOOP<br /> MOOL | FAOL <br />FBOL <br />FCOL | FOAL<br /> FOBL<br /> FOCL | FOOA<br /> FOOB<br /> FOOC |
