实现广度优先算法，分析

--- a/ds5_graph/图.md
+++ b/ds5_graph/图.md
@@ -59,3 +59,19 @@ E = {(v0,v1,5),(v1,v2,4),(v2,v3,9),(v3,v4,7),(v4,v0,1),(v0,v5,2),(v5,v4,8),(v3,v
 | _OOL                                             | F_OL                       | FO_L                       | FOO_                       |
 | ------------------------------------------------ | -------------------------- | -------------------------- | -------------------------- |
 | POOL<br /> ROOL <br />NOOL<br /> LOOP<br /> MOOL | FAOL <br />FBOL <br />FCOL | FOAL<br /> FOBL<br /> FOCL | FOOA<br /> FOOB<br /> FOOC |
+
+## 六、广度（宽度）优先搜索（BFS）
+
+给定图G和起始顶点s，广度优先搜索通过探索图中的边找到G中的所有顶点，其中包含从s开始的路径。通过广度优先搜索，找到和s相距为k的所有顶点，然后找到距离为k+1的所有顶点。
+
+广度优先搜索从其他起始顶点开始添加它的所有子节点，然后再添加其子节点的子节点。
+
+**怎么画图？**
+
+为了跟踪进度，BFS将每个顶点着色为白色，灰色或者黑色。
+
+初始化的时候，所有的顶点都被初始化为白色，白色顶点是未发现的顶点。
+
+当一个顶点最初被发现时把它变成灰色，意味着可能有与其相邻的一些白色顶点
+
+当BFS完全探索完一个顶点时，它被着色为黑色，意味着它没有相邻的白色顶点了
